--- a/app/src/main/res/layout/habit_item.xml
+++ b/app/src/main/res/layout/habit_item.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="habit"
-            type="ru.vidos.habitstracker.data.Habit" />
+            type="ru.vidos.habitstracker.models.Habit" />
 
     </data>
 
