--- a/app/src/main/res/menu/add_edit_habit_options.xml
+++ b/app/src/main/res/menu/add_edit_habit_options.xml
@@ -6,13 +6,13 @@
         android:orderInCategory="100"
         android:title="@string/save"
         android:icon="@drawable/ic_baseline_save_24"
-        app:showAsAction="always" />
-<!--
+        app:showAsAction="withText"/>
+
     <item
         android:id="@+id/edit_habit"
         android:orderInCategory="100"
         android:title="@string/edit"
         android:icon="@drawable/ic_baseline_edit_24"
-        app:showAsAction="ifRoom"/>
-        -->
+        app:showAsAction="withText"/>
+
 </menu>
