Task 7. Multithreading, coroutines. Full work project.

--- a/app/src/main/res/layout/fragment_add_edit_habit.xml
+++ b/app/src/main/res/layout/fragment_add_edit_habit.xml
@@ -8,7 +8,7 @@
             type="ru.vidos.habitstracker.ui.home.addedit.AddEditHabitViewModel" />
         <variable
             name="habitType"
-            type="ru.vidos.habitstracker.utils.HabitTypes" />
+            type="ru.vidos.habitstracker.models.HabitTypes" />
     </data>
 
     <LinearLayout
