Task 9. Dagger 2. Full work project.

--- a/app/src/main/res/layout/fragment_add_edit_habit.xml
+++ b/app/src/main/res/layout/fragment_add_edit_habit.xml
@@ -9,7 +9,7 @@
             type="ru.vidos.habitstracker.ui.home.addedit.AddEditHabitViewModel" />
         <variable
             name="habitType"
-            type="ru.vidos.habitstracker.models.HabitTypes" />
+            type="ru.vidos.habitstracker.domain.models.HabitTypes" />
     </data>
 
     <LinearLayout
