--- a/app/src/main/res/layout/fragment_habits_list_modal_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_habits_list_modal_bottom_sheet.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="ru.vidos.habitstracker.HabitsTrackerViewModel" />
+            type="ru.vidos.habitstracker.ui.HabitsTrackerViewModel" />
 
     </data>
 
