--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
     android:label="@string/add_habit"
     app:startDestination="@id/nav_home">
@@ -28,7 +27,7 @@
         android:label="Editor" >
         <argument
             android:name="currentHabit"
-            app:argType="ru.vidos.habitstracker.models.Habit"
+            app:argType="ru.vidos.habitstracker.domain.models.Habit"
             app:nullable="true"
             android:defaultValue="@null" />
     </fragment>
