--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,7 +27,7 @@
         android:label="Editor" >
         <argument
             android:name="currentHabit"
-            app:argType="ru.vidos.habitstracker.domain.models.Habit"
+            app:argType="ru.vidos.data.models.HabitDto"
             app:nullable="true"
             android:defaultValue="@null" />
     </fragment>
